--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 body {
   margin: 0px
 }
+
+.dashboarddiv {
+  width: 100%;
+  height: 90%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  overflow: auto;
+}
