--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   margin: 0px;
+  background-color: black;
+  color: white;
 }
 .dashboarddiv {
   display: flex;
@@ -16,4 +18,16 @@ body {
 }
 .leftup > * {
   flex-basis: 100%;
+}
+
+.axisWhite line{
+  stroke: #ffffff;
+}
+
+.axisWhite path{
+  stroke: #ffffff;
+}
+
+.axisWhite text{
+  fill: #ffffff;
 }
