--- a/style.css
+++ b/style.css
@@ -3,22 +3,30 @@ body {
   background-color: black;
   color: white;
 }
-.dashboarddiv {
-  display: flex;
-  gap: 1em;
-}
-.dashboarddiv > * {
-  flex-basis: 100%;
+
+.container {  display: grid;
+  grid-template-columns: 360px 360px 350px;
+  grid-template-rows: 290px 290px 290px;
+  gap: 1em 1em;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "area-1 area-3 area-5"
+    "area-2 area-3 area-5"
+    "area-4 area-4 area-6";
 }
 
-.leftup {
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
-}
-.leftup > * {
-  flex-basis: 100%;
-}
+.area-1 { grid-area: area-1; }
+
+.area-2 { grid-area: area-2; }
+
+.area-3 { grid-area: area-3; }
+
+.area-4 { grid-area: area-4; }
+
+.area-5 { grid-area: area-5; }
+
+.area-6 { grid-area: area-6; }
+
 
 .axisWhite line{
   stroke: #ffffff;
@@ -30,4 +38,4 @@ body {
 
 .axisWhite text{
   fill: #ffffff;
-}
+} 
