--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@ body {
 }
 
 .container {  display: grid;
-  grid-template-columns: 380px 340px 350px;
-  grid-template-rows: 260px 260px 250px;
+  grid-template-columns: 380px 340px 1200px 500px;
+  grid-template-rows: 300px 300px 500px;
   gap: 1em 1em;
   grid-auto-flow: row;
   grid-template-areas:
-    "area-1 area-3 area-5"
-    "area-2 area-3 area-5"
-    "area-4 area-4 area-6";
+    "area-2 area-2 area-5 area-3"
+    "area-4 area-4 area-5 area-3"
+    "area-1 area-1 area-1 area-6";
 }
 
 .area-1 { grid-area: area-1; }
