--- a/style.css
+++ b/style.css
@@ -7,11 +7,14 @@ body {
 .container {  display: grid;
   grid-template-columns: 380px 340px 1200px 500px;
   grid-template-rows: 300px 300px 500px;
+  /* grid-template-columns: 190px 170px 600px 250px;
+  grid-template-rows: 150px 150px 250px; */
   gap: 1em 1em;
   grid-auto-flow: row;
   grid-template-areas:
     "area-2 area-2 area-5 area-3"
     "area-4 area-4 area-5 area-3"
+    "area-1 area-1 area-1 area-6"
     "area-1 area-1 area-1 area-6";
 }
 
@@ -51,6 +54,11 @@ body {
 }
 
 .titletext {
-  /* margin-left :45%; */
-  text-align: center;
+  margin-left :-5%;
+  /* text-align: center; */
+}
+
+.dropdown {
+  margin-left :45%;
+  justify-content: center;
 }
